笔记页面实现
